added dynamic modal login

--- a/src/Brainapp/CoreBundle/Resources/public/css/default_template.css
+++ b/src/Brainapp/CoreBundle/Resources/public/css/default_template.css
@@ -40,5 +40,6 @@ footer .footer-col {
 }
 footer .footer-below {
     background-color: #408F9A;
+    background-color: #3a3a3c;
     padding: 25px 0;
 }
