--- a/src/Brainapp/CoreBundle/Resources/public/css/index.css
+++ b/src/Brainapp/CoreBundle/Resources/public/css/index.css
@@ -94,6 +94,15 @@ section.success {
     background: #408F9A none repeat scroll 0 0;
     color: #fff;
 }
+section.success a, 
+section.success a:hover,
+section.success a:focus,
+section.success a:active,
+section.success a.active {
+    color: #e20074;
+    font-family: "open-sans-regular",Arial,Helvetica,sans-serif;
+}
+
 @media (max-width: 767px) {
 	section {
 	    padding: 75px 0;
