--- a/src/Brainapp/CoreBundle/Resources/views/Template/template_default.html.twig
+++ b/src/Brainapp/CoreBundle/Resources/views/Template/template_default.html.twig
@@ -34,14 +34,15 @@
 {# FOOTER #}
 {% block footer %}
     <footer class="text-center">
-        <div class="footer-above">
-            <div class="container">
-                <div class="row">
-                    <div class="footer col-md-8">
-                        <h3>Projektgruppe KMI14/WI14</h3>
-                        <p><strong>Brainapp</strong> entstand im Rahmer einer studentischen Projektarbeit der Hochschule für Telekommunikation Leipzig (HfTL) durch die Studentengruppe KMI14/WI14</p>
-                    </div>
-                    <div class="footer-col col-md-4">
+{#         <div class="footer-above">#}
+{#             <div class="container">#}
+{#                 <div class="row">#}
+{#                     <div class="footer col-md-8">#}
+{#                         <h3>Projektgruppe KMI14/WI14</h3>#}
+{#                         <p><strong>Brainapp</strong> entstand im Rahmer einer studentischen Projektarbeit der Hochschule für Telekommunikation Leipzig (HfTL) durch die Studentengruppe KMI14/WI14</p>#}
+{#                     </div>#}
+{#                     <div class="footer-col col-md-4">#}
+
 {#                         <h3>Around the Web</h3>#}
 {#                         <ul class="list-inline">#}
 {#                             <li>#}
@@ -60,13 +61,14 @@
 {#                                 <a class="btn-social btn-outline" href="#"><i class="fa fa-fw fa-dribbble"></i></a>#}
 {#                             </li>#}
 {#                         </ul>#}
-                    </div>
-                    <div class="footer-col col-md-3 col-md-offset-1">
-                    	<img alt="" src="{{ asset('bundles/brainappcore/images/hftl-logo-n.png') }}" class="img-responsive">
-                    </div>
-                </div>
-            </div>
-        </div>
+
+{#                     </div>#}
+{#                     <div class="footer-col col-md-3 col-md-offset-1">#}
+{#                     	<img alt="" src="{{ asset('bundles/brainappcore/images/hftl-logo-n.png') }}" class="img-responsive">#}
+{#                     </div>#}
+{#                 </div>#}
+{#             </div>#}
+{#         </div>#}
         <div class="footer-below">
             <div class="container">
                 <div class="row">
