--- a/src/Brainapp/CoreBundle/Resources/views/Dashboard/Widgets/form_create_mainCategory.html.twig
+++ b/src/Brainapp/CoreBundle/Resources/views/Dashboard/Widgets/form_create_mainCategory.html.twig
@@ -1,20 +1,11 @@
-{# {% block stylesheets %}#}
-{# 	<link rel="stylesheet" type="text/css" media="screen" href="/workspace/brainapp/web/app_dev.php/css/269a6dd_part_1.css"/>#}
-{# {% endblock %}#}
-
 {{ form_start(c_mask_user_cat) }}
 	<div role="form">
-		{% if  error is not null %}
-			<div class="form-group">
-				<div class="alert alert-danger" role="alert">	
-					{{ error }}
-				</div>
-			</div>
-		{%  endif %}
 		<div class="form-group">
 			<div class='input-group input-group'>
 				<span class='input-group-addon' id='sizing-addon2'>Name</span>
 				{{ form_widget(c_mask_user_cat.categoryName) }}
+				{% block otherFormFields %}
+				{% endblock %}
 			</div>
 		</div>
 		<div class="form-group">
