--- a/src/Brainapp/CoreBundle/Resources/views/Dashboard/usercategories.html.twig
+++ b/src/Brainapp/CoreBundle/Resources/views/Dashboard/usercategories.html.twig
@@ -17,25 +17,27 @@
          <tr>
             <th>ID</th>
             <th>Name</th>
-            <th>Ist Unterkategorie?</th>
-            <th>Hauptkategorie</th>
             <th></th>
          </tr>
        </thead>
        <tbody>
             {% for cat in userCategories %}
               <tr>
-                 <td>{{ cat.categoryId }}</td>
-                 <td>{{ cat.categoryName }}</td>
-                 <td>{% if cat.isSubCategory == true %}ja{% endif %}</td>
-                 <td>{{ cat.parentCategoryId }}</td>
-                 <td>
+                 <td width="3%" align="right">{{ cat.categoryId }}</td>
+                 <td width="80%">{{ cat.categoryName }}</td>
+                 <td width="17%">
                     <div class="btn-group" role="group" aria-label="...">
-                       <button type="button" class="btn btn-default" data-toggle="modal" data-target="#modalMaskEditMainCategory">
+                       <button type="button" class="btn btn-default" data-toggle="modal" data-target="#modalMaskEditMainCategory" title="Hauptkategorie bearbeiten" >
                           <a href="#"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
                        </button>
-                       <button type="button" class="btn btn-default">
+                       <button type="button" class="btn btn-default" title="Hauptkategorie l&ouml;schen">
                           <a href="#"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a>
+                       </button>
+                       <button type="button" class="btn btn-default" title="Unterkategorie hinzuf&uuml;gen">
+                          <a href="#"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></a>
+                       </button>
+                       <button type="button" class="btn btn-default" title="Unterkategorie anzeigen">
+                          <a href="#"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></a>
                        </button>
                     </div>
                  </td>
@@ -60,17 +62,17 @@
        <tbody>
             {% for cat in userCategories %}
               <tr>
-                 <td>{{ cat.categoryId }}</td>
-                 <td>{{ cat.categoryName }}</td>
-                 <td>{% if cat.isSubCategory == true %}ja{% endif %}</td>
-                 <td>{{ cat.parentCategoryId }}</td>
-                 <td>
+                 <td width="3%" align="right">{{ cat.categoryId }}</td>
+                 <td width="60%">{{ cat.categoryName }}</td>
+                 <td width="10%">{% if cat.isSubCategory == true %}ja{% endif %}</td>
+                 <td width="10%">{{ cat.parentCategoryId }}</td>
+                 <td align="left" width="17%">
                     <div class="btn-group" role="group" aria-label="...">
                        <button type="button" class="btn btn-default" data-toggle="modal" data-target="#modalMaskEditSubCategory">
-                          <a href="#"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+                          <a href="#"><span class="glyphicon glyphicon-pencil" aria-hidden="true" title="Unterkategorie bearbeiten"></span></a>
                        </button>
                        <button type="button" class="btn btn-default">
-                          <a href="#"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a>
+                          <a href="#"><span class="glyphicon glyphicon-remove" aria-hidden="true" title="Unterkategorie l&ouml;schen"></span></a>
                        </button>
                     </div>
                  </td>
@@ -90,7 +92,7 @@
            <h4 class="modal-title">Hauptkategorie bearbeiten</h4>
          </div>
          <div class="modal-body">
-           {{ render(controller('BrainappCoreBundle:Dashboard/DashboardAddUserCat:addUserMainCategory')) }}
+          <!-- {{ render(controller('BrainappCoreBundle:Dashboard/DashboardAddUserCat:addUserMainCategory')) }} --> 
          </div>
          <div class="modal-footer">
            <button type="button" class="btn btn-default" data-dismiss="modal">Speichern</button>
