Anforderungen zu UserMain- und UserSubCategories für User fertig
implementiert. Quellcode-Pflege für UserCategories.

--- a/src/Brainapp/CoreBundle/Resources/views/Navbar/sidebar_default.html.twig
+++ b/src/Brainapp/CoreBundle/Resources/views/Navbar/sidebar_default.html.twig
@@ -1,7 +1,7 @@
 <ul class="nav nav-sidebar">
 	<li class="list-group-item active">Persönlicher Bereich<span class="sr-only">(current)</span></a></li>
 	<li><a href="#"><span class="glyphicon glyphicon-piggy-bank" aria-hidden="true"></span>&nbsp&nbspKontenverwaltung</a></li>
-	<li><a href="{{ path('show_user_categories') }}"><span class=" glyphicon glyphicon-tags" aria-hidden="true"></span>&nbsp&nbspKategorieverwaltung</a></li>
+	<li><a href="{{ path('show_user_main_categories') }}"><span class=" glyphicon glyphicon-tags" aria-hidden="true"></span>&nbsp&nbspKategorieverwaltung</a></li>
 	<li><a href="#"><span class="glyphicon glyphicon-time" aria-hidden="true"></span>&nbsp&nbspDauerauftr&auml;ge</a></li>
 	<li><a href="#"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>&nbsp&nbspVorlagen</a></li>
 	<li><a href="#"><span class="glyphicon glyphicon-signal" aria-hidden="true"></span>&nbsp&nbspBudgetverwaltung</a></li>
