--- a/src/Brainapp/CoreBundle/Resources/views/Dashboard/UserCategoryViews/showUserSubCategories.html.twig
+++ b/src/Brainapp/CoreBundle/Resources/views/Dashboard/UserCategoryViews/showUserSubCategories.html.twig
@@ -20,7 +20,7 @@
 {% block showUserCategoriesCategoryTable %}
             {% for cat in userSubCategories %}
               <tr>
-                 <td width="3%" align="right">{{ cat.categoryId }}</td>
+{#                  <td width="3%" align="right">{{ cat.categoryId }}</td>#}
                  <td width="80%">{{ cat.categoryName }}</td>
                  <td width="17%">
                     <div class="btn-group" role="group" aria-label="...">
