--- a/src/Brainapp/CoreBundle/Resources/views/Dashboard/firstLoginPage.html.twig
+++ b/src/Brainapp/CoreBundle/Resources/views/Dashboard/firstLoginPage.html.twig
@@ -24,6 +24,8 @@
 			<p>In der Budgetstatistik können Sie später den aktuellen Stand Ihrer Budgets für einen ausgewählten Monat einsehen. Der jeweilige Verbrauch wird 
 			dabei in Form eines Balkendiagramm visualisiert. Wenn Sie den Mauszeiger über dieses Balkendiagramm bewegen, können Sie die Summe der Ausgaben einsehen, 
 			die in dem betreffenden Zeitraum für dieses Budget existieren.</p>
+			<p>Wenn Sie in einem bestimmten Zeitraum mehr Geld für ein Budget reservieren wollen, dann sollten Sie eine Einnahme (siehe 4.) mit dem gewünschten Betrag und der mit 
+			dem betreffenden Budget verknüpften Kategorie buchen. Wir beabsichtigen, dies in einer späteren Iteration unseres Haushaltsbuches nutzerfreundlicher zu gestalten.</p>
 			<p>
 				<a href="{{ path('show_user_budget_vorlagen') }}" class="btn btn-info btn-lg"><i class="glyphicon glyphicon-signal"></i>  Zur Budgetverwaltung</a>
 				<a href="{{ path('show_user_budgets_for_month') }}" class="btn btn-info btn-lg"><i class="glyphicon glyphicon-dashboard"></i>  Zur Budgetstatistik</a>
