--- a/src/Brainapp/UserBundle/Resources/views/Security/login_modal.html.twig
+++ b/src/Brainapp/UserBundle/Resources/views/Security/login_modal.html.twig
@@ -30,7 +30,8 @@
     			<p class="help-block"></p>
     		</div>
     		<button type="submit" id="submit" name="_submit" class="btn btn-success btn-lg btn-block">Login</button>
-    		<a href="{{ path('resetting_request') }}" class="btn btn-default btn-block">Passwort vergessen?</a>
+    		<a href="" type="button" data-toggle="modal" data-target="#resettingModal" class="btn btn-default btn-block">Passwort vergessen?</a>
+{#     		<a href="{{ path('resetting_request') }}" class="btn btn-default btn-block">Passwort vergessen?</a>#}
     	</form>
         
       </div>
