+ added button spinner

--- a/src/Brainapp/UserBundle/Resources/views/Resetting/request_modal.html.twig
+++ b/src/Brainapp/UserBundle/Resources/views/Resetting/request_modal.html.twig
@@ -27,7 +27,7 @@
     			<input type="text" class="form-control" id="username" name="username" {% if last_username is defined %}value="{{ last_username }}" {% endif %}placeholder="Benutzername" title="Geben Sie Ihren Benutzernamen an" required="required">
     			<span class="help-block"></span>
     		</div>
-    		<button type="submit" id="submit" name="submit" class="btn btn-success btn-lg btn-block">Passwort zurücksetzen</button>
+    		<button type="submit" id="submit" name="submit" class="btn btn-success btn-lg btn-block"><i class="fa fa-spinner fa-spin" style="display:none"></i> Passwort zurücksetzen</button>
     		<a href="" type="button" data-toggle="modal" data-target="#loginModal" class="btn btn-default btn-block">Account bereits vorhanden?</a>
     	</form>
       </div>
