--- a/src/Brainapp/UserBundle/Resources/views/Security/login_modal.html.twig
+++ b/src/Brainapp/UserBundle/Resources/views/Security/login_modal.html.twig
@@ -29,7 +29,7 @@
     			</label>
     			<p class="help-block"></p>
     		</div>
-    		<button type="submit" id="submit" name="_submit" class="btn btn-success btn-lg btn-block">Login</button>
+    		<button type="submit" id="submit" name="_submit" class="btn btn-success btn-lg btn-block"><i class="fa fa-spinner fa-spin" style="display:none"></i> Login</button>
     		<a href="" type="button" data-toggle="modal" data-target="#resettingModal" class="btn btn-default btn-block">Passwort vergessen?</a>
 {#     		<a href="{{ path('resetting_request') }}" class="btn btn-default btn-block">Passwort vergessen?</a>#}
     	</form>
