--- a/src/Brainapp/CoreBundle/Resources/views/Default/index.html.twig
+++ b/src/Brainapp/CoreBundle/Resources/views/Default/index.html.twig
@@ -62,7 +62,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1">
-                	<p><strong>Brainapp</strong> entstand im Rahmen einer studentischen Projektarbeit der <strong>Hochschule für Telekommunikation Leipzig (HfTL)</strong> durch die Studentengruppe KMI14/WI14</p>
+                	<p><strong>Brainapp</strong> entstand im Rahmen einer studentischen Projektarbeit der <strong>Hochschule für Telekommunikation Leipzig (HfTL)</strong> durch die Studierendengruppe KMI14/WI14</p>
                 </div>
                 <div class="col-lg-3 col-lg-offset-1">
                 	{% if modal_login %}{% set image_path = 'bundles/brainappcore/images/hftl-logo.jpg' %}
